--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -33,7 +33,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: webpage-ingress
-  namespace: default  # ou o namespace onde o serviço 'webpage' está
+  namespace: app  # ou o namespace onde o serviço 'webpage' está
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
